# hfsolver

./: .travis.yml  CMakeLists.txt  LICENSE  README.rst
cmake/: FindARPACK.cmake  FindBDDCML.cmake  FindBLOPEX.cmake  FindFFTW.cmake  FindLapack.cmake  FindLibint.cmake  FindMUMPS.cmake  FindParMETIS.cmake  FindPetsc.cmake  FindSCALAPACK.cmake  FindUMFPACK.cmake  UserOverride.cmake
hfsolver/: CMakeLists.txt  c_hfsolver.pxd  special.pyx
src/: CMakeLists.txt  arpack.f90  basis.f90  basis_aux.f90  c_hfsolver.f90  c_hfsolver.h  c_mkl.c  c_petsc.c  cints.c  cints.h  constants.f90  convert_basis.py  debye.f90  debye_potential.f90  debye_potential_series.f90  diagrams_gf.py  diagrams_mbpt.py  drivers.f90  efermi.f90  ewald.f90  fe.f90  fe_mesh.f90  feast.f90  feutils.f90  ffte.f90  fftw.f90  fourier.f90  gaussians_hfsolver.f90  gaussians_libint.f90  gf.f90  gf2.f90  hartree_screening.f90  hfprint.f90  integration.f90  interp3d.f90  isolve.f90  lapack.f90  linalg_feast.f90  mbpt.f90  mbpt2.f90  (+45 more)
src/erd/: CMakeLists.txt  erd__prepare_ctr.F  erd__tuning.inc
src/feast/: CMakeLists.txt  f90_functions_wrapper.f90  f90_noruntime_interface.fi  feast.f90  feast_banded.f90  feast_dense.f90  feast_sparse.f90  lbprim.f90  lsprim.f90  point_gauss_legendre.f90
src/ffte/: CMakeLists.txt  param.h  param2.h  pzfft3dv.f  zfft3d.f
src/tests/: CMakeLists.txt  Ewald.ipynb  OFMD Energies-10 eV XL.ipynb  OFMD Energies.ipynb  OFMD.input  analyze_md.f90  conv3.txt  ewald_conv4.f90  ewald_convN.f90  lag06.txt  lag20.txt  lag52.txt  ofmd_fft.f90  ofmd_results.txt  ofmd_results10eV.txt  ofmd_results10eV_XL.txt  p631ss.txt  plot_ra.py  pos.txt  test_arpack.f90  test_basis.f90  test_basis_sto.f90  test_bessel.f90  test_brent.f90  test_erd.f90  test_ewald.f90  test_ewald2.f90  test_ewald3.f90  test_ewald4.f90  test_ewald5.f90  test_ewald6.f90  test_fe_he.f90  test_fe_ne.f90  test_fe_ra.f90  test_fe_ra2.f90  test_fermi_dirac.f90  test_ffte.f90  test_ffte_par.f90  test_fftw.f90  test_fftw_c.c  (+41 more)
src/tests/bessel/: common.py  test_modified_bessel.py
src/tests/bsplines/: CMakeLists.txt  Dirac Solutions.ipynb  PPUM Basis.ipynb  PPUM.ipynb  Plot B-splines basis.ipynb  ppum_conv_enr.txt  ppum_conv_enr2.txt  ppum_conv_enr3.txt  ppum_conv_np.txt  ppum_conv_ort0.txt  ppum_conv_ort1.txt  ppum_conv_rc10.txt  ppum_conv_rc100.txt  ppum_conv_rc20.txt  ppum_conv_rc300.txt  ppum_conv_rc40.txt  ppum_conv_rc5.txt  ppum_conv_rc80.txt  radial_util.f90  schroed_util.f90  test_bsplines.f90  test_dirac.f90  test_dirac_ppum.f90  test_ppum.f90  test_schroed.f90
src/tests/bsplines/nb/: Conv2.ipynb  Convergence.ipynb  Orthogonalization.ipynb
src/tests/feast/: CMakeLists.txt  test_generalized.f90  test_simple.f90
src/tests/fem/: Al.pseudo  CMakeLists.txt  D.pseudo  Diffusion.ipynb  Fe.pseudo  H.pseudo.gaussian  Plot FE.ipynb  Plot.ipynb  connectivity.py  conv.txt  conv_poisson3d.f90  converged_energies.f90  fem3.txt  fft_poisson.py  jed.f90  laplace2d_eig.f90  log128.txt  log64.txt  ofmd.f90  ofmd_time_propagation.f90  poisson2d.f90  poisson3d.f90  rdirac.f90  run.sh  schroed1d.f90  schroed2d.f90  schroed3d.f90  test_fft_ofmd.f90  test_free_energy.f90  test_free_energy2.f90  test_free_energy3.f90  test_free_energy4.f90  test_free_energy_bddc.f90  test_free_energy_fft.f90  test_free_energy_fft2.f90  test_functional_derivative.f90  test_functional_derivative_fft.f90  test_functional_derivative_min_fft.f90  test_minimization.f90  test_poisson3d.f90
src/tests/fem/plots/: Convergence 1D.ipynb  Create H.pseudo.ipynb  Enrichment.ipynb  FFT Ven.ipynb  FFT charged sphere.ipynb  Hpsi FFT handling.ipynb  Hpsi.ipynb  Plot FFT and FE 1x1x1.ipynb  Plot FFT and FE.ipynb  Plot H.pseudo.density.ipynb  Plot H.pseudo.ipynb  Plot pseudo.ipynb  Potential FFT deriv + Fortran.ipynb  Potential FFT deriv.ipynb  Radial Dirac.ipynb  Rational Function Fit.ipynb  Smoothing noisy time series data.ipynb  Sparse matrix plot.ipynb  TVTK.ipynb  VTK.ipynb  Ven.ipynb  Vxc derivation.ipynb  conv.txt  conv_fe1.txt  conv_fe1Nq.txt  conv_fe2.txt  conv_fe3.txt  conv_fem.txt  fft.ipynb
src/tests/fem/plots/reg/: H.pseudo  plot.ipynb
src/tests/fft/: 3D current.ipynb  CMakeLists.txt  Conductivity.ipynb  ks.f90  ofmd_rt.f90  sch1d_time_prop.f90  test_ffte_par2.f90  test_functional_derivative_min_fft.f90  test_it_min.f90  test_it_min_vw1.f90  test_it_min_vw2.f90  test_psch3d.f90  test_rt.f90  test_sch1d_eig.f90  test_sch1d_osc.f90  test_sch1d_osc2.f90  test_sch1d_osc_eigen.f90  test_sch3d_eig.f90  test_sch3d_osc.f90  test_sch3d_osc_eigen.f90  test_sch3d_rt.f90  test_sch_rt.f90  test_vloc.f90
src/tests/fft/nb/: 3D Double Well.ipynb  Double Well 1D.ipynb  FFT Aliasing.ipynb  Plot conductivity 3D Schroedinger.ipynb  Potential Well.ipynb  Schroedinger 1D.ipynb  Velocity and Length Gauges Comparison.ipynb  it_min convergence.ipynb
src/tests/fft/tests_ks/: CMakeLists.txt
src/tests/fft/tests_ks/1/: CMakeLists.txt  check_output.py  input  output_ref.json
src/tests/fft/tests_ks/2/: CMakeLists.txt  POSCAR  check_output.py  input  output_ref.json
src/tests/md/: Analyze.ipynb
src/tests/nb/: Conductivity.ipynb  Diffusion.ipynb  Ewald FFT Convergence.ipynb  Ewald N scaling.ipynb  FFT convergence.ipynb  Gaussian analytic.ipynb  Poisson Gaussian Convergence.ipynb  Radial Neutralizing Density.ipynb
src/tests/random/: CMakeLists.txt  test_random.f90
src/tests/thesis/: CMakeLists.txt  GTO Convergence.ipynb  Plots.ipynb  STO Convergence.ipynb  be_eigs_D.txt  eigs_D.txt  fe_mg.f90  fe_mg_Etot.txt  fe_mg_Etot_ET.txt  fe_mg_plot.py  fe_mg_plot_ET.py  fe_ra.f90  fe_ra_Etot.txt  fe_ra_opt.f90  fe_ra_plot.py  fe_ra_plot_dofs.py  fe_xe.f90  mg_eigs_D.txt  sto_be_screen_gf.f90  sto_be_screen_gf_plot.py  sto_mg_conv.f90  sto_mg_conv_Etot.txt  sto_mg_screen_gf.f90  sto_mg_screen_gf_plot.py  sto_xe_Etot.txt  sto_xe_conv.f90  sto_xe_plot_ET.py
utils/: generate  units.py
