include_directories(${PROJECT_BINARY_DIR}/src)

macro(ADDTEST name)
    add_executable(${name} ${name}.f90)
    target_link_libraries(${name} hfsolver ${LIBS})
    add_test(${name} ${PROJECT_BINARY_DIR}/${name})
endmacro(ADDTEST)

project(tests)

ADDTEST(test_basis)
ADDTEST(test_basis_sto)
ADDTEST(test_gaunt)
ADDTEST(test_ijkl)
ADDTEST(test_sto)
ADDTEST(test_sto_hm)
ADDTEST(test_sto_he)
ADDTEST(test_sto_he2)
ADDTEST(test_sto_he3)
ADDTEST(test_sto_he4)
ADDTEST(test_sto_he5)
ADDTEST(test_sto_be)
ADDTEST(test_sto_be3)
set_tests_properties(test_sto_be3 PROPERTIES LABELS slow)
ADDTEST(test_sto_be4)
ADDTEST(test_sto_be5)
ADDTEST(test_sto_be6)
set_tests_properties(test_sto_be6 PROPERTIES LABELS slow)
ADDTEST(test_sto_be8)
set_tests_properties(test_sto_be8 PROPERTIES LABELS slow)
ADDTEST(test_sto_ne)
ADDTEST(test_sto_ne4)
ADDTEST(test_sto_ne5)
ADDTEST(test_sto_ne6)
ADDTEST(test_sto_ne7)
set_tests_properties(test_sto_ne7 PROPERTIES LABELS slow)
ADDTEST(test_sto_mg)
ADDTEST(test_sto_mg6)
set_tests_properties(test_sto_mg6 PROPERTIES LABELS slow)
ADDTEST(test_sto_xe)
ADDTEST(test_sto_ra)
ADDTEST(test_fe_he)
ADDTEST(test_fe_ne)
ADDTEST(test_fe_ra)
ADDTEST(test_fe_ra2)
ADDTEST(test_gaussians_atoms)
ADDTEST(test_gaussians_molecules)

ADDTEST(test_fm)
ADDTEST(test_bessel)

ADDTEST(test_sparse)

ADDTEST(test_fourier)

ADDTEST(test_brent)

ADDTEST(test_random)

ADDTEST(test_linregress)


if(WITH_PETSC)
    ADDTEST(test_petsc)
endif()

if(WITH_FFTW)
    ADDTEST(test_fftw)
    add_executable(test_fftw_c test_fftw_c.c)
    target_link_libraries(test_fftw_c ${LIBS})
    add_test(test_fftw_c ${PROJECT_BINARY_DIR}/test_fftw_c)
endif()

if(WITH_UMFPACK)
    ADDTEST(test_umfpack)
    ADDTEST(test_umfpack_factorize)
    add_executable(test_umfpack_c test_umfpack_c.c)
    target_link_libraries(test_umfpack_c ${LIBS})
    add_test(test_umfpack_c ${PROJECT_BINARY_DIR}/test_umfpack_c)
endif()

add_subdirectory(thesis)
add_subdirectory(fem)
add_subdirectory(feast)
